--- a/sysctl.d/krathalans-custom.conf
+++ b/sysctl.d/krathalans-custom.conf
@@ -18,12 +18,15 @@ kernel.dmesg_restrict=1
 kernel.unprivileged_bpf_disabled=1
 net.core.bpf_jit_harden=2
 
-# Breaks debugging tools AND wine
+# Setting this to higher than 1 breaks:
+# - debugging tools
+# - cups
+# - wine
 # 0: all processes of the same uid can trace each other
 # 1: default; only parent processes can trace children
 # 2: only root can use ptrace
 # 3: completely disable ptrace
-kernel.yama.ptrace_scope=3
+kernel.yama.ptrace_scope=1
 
 # Disable kexec which can be used to replace the running kernel
 kernel.kexec_load_disabled=1
