--- a/pacman.conf
+++ b/pacman.conf
@@ -87,6 +87,9 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+[krathalan]
+Server = https://builds.krathalan.net/$arch
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
