--- a/makepkg.conf
+++ b/makepkg.conf
@@ -36,13 +36,20 @@ CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
 
 #-- Compiler and Linker Flags
+# Use these for wine
+#CPPFLAGS="-D_FORTIFY_SOURCE=0 -march=haswell -fPIC"
+#CFLAGS="-march=haswell -O2 -pipe -fno-plt -fPIC"
+#CXXFLAGS="-march=haswell -O2 -pipe -fno-plt -fPIC"
+
+# And these for everything else
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
 CFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt"
 CXXFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt"
+
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 #RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
-#MAKEFLAGS="-j2"
+MAKEFLAGS="-j4"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
