Update dracut compression settings

--- a/dracut.conf.d/krathalans-custom.conf
+++ b/dracut.conf.d/krathalans-custom.conf
@@ -1,3 +1,4 @@
-hostonly="yes"
 omit_dracutmodules+=" 95nfs biosdevname bootchart btrfs busybox dmraid mdraid mksh network network-legacy nfs iscsi stratis "
+hostonly="yes"
 reproducible="yes"
+compress="zstd"
