Update pacman.conf ignored files

--- a/pacman.conf
+++ b/pacman.conf
@@ -29,7 +29,7 @@ Architecture = auto
 # Do not extract /etc config files which SHOULD NOT be overriden
 # as they are set by files in /etc/krathalan, or generate useless
 # .pacnews (e.g. /etc/locale.gen from glibc)
-NoExtract = /etc/xdg/reflector/reflector.conf /etc/conf.d/wireless-regdom /etc/dict/dictd.conf /etc/ssh/ssh_config /etc/ssh/sshd_config /etc/pacman.conf /etc/makepkg.conf /etc/locale.gen
+NoExtract = /etc/pacman.conf /etc/makepkg.conf /etc/locale.gen /etc/pacman.d/mirrorlist /etc/conf.d/wireless-regdom /etc/dict/dictd.conf /etc/ssh/ssh_config /etc/ssh/sshd_config
 
 # Misc options
 ILoveCandy
