Update nginx config to use compression

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,9 +38,15 @@ http {
   # Disable sending nginx version in headers
   server_tokens off;
 
-  # Keep off to stop BREACH vuln
-  # Also saves CPU cycles, plus all my stuff is small.
-  gzip off;
+  # Turn OFF on sites/blocks that handle secrets, e.g. login pages
+  # Otherwise, compression is good
+  # Nginx will default to brotli if both are supported by the client
+  brotli on;
+  brotli_comp_level 7;
+  brotli_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip on;
+  gzip_comp_level 6;
+  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
   # Basic Settings
   sendfile on;
