--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,10 @@
 # Fancy index module https://github.com/aperezdc/ngx-fancyindex
 load_module /usr/lib/nginx/modules/ngx_http_fancyindex_module.so;
 
+# Brotli compression
+load_module modules/ngx_http_brotli_filter_module.so;
+load_module modules/ngx_http_brotli_static_module.so;
+
 # Misc
 worker_processes auto;
 
