Update nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,6 +36,11 @@ http {
   # Use personal generated dhparams https://weakdh.org/
   ssl_dhparam /etc/krathalan/dhparams.pem;
 
+  # Enable 0-RTT (TLS 1.3)
+  # Turn OFF on sites/blocks that take non-idempotent requests
+  # https://blog.cloudflare.com/introducing-0-rtt/
+  ssl_early_data on;
+
   # Other SSL Settings
   ssl_session_cache shared:SSL:10m;
 
@@ -45,12 +50,15 @@ http {
   # Turn OFF on sites/blocks that handle secrets, e.g. login pages
   # Otherwise, compression is good
   # Nginx will default to brotli if both are supported by the client
+  # brotli_static should save CPU cycles; make sure to manually
+  # compress each file with brotli you want this to apply to
   brotli on;
-  brotli_comp_level 7;
-  brotli_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  brotli_static on;
+  brotli_comp_level 11;
+  brotli_types text/html text/plain text/css;
   gzip on;
-  gzip_comp_level 6;
-  gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_comp_level 9;
+  gzip_types text/html text/plain text/css;
 
   # Basic Settings
   sendfile on;
