--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,10 +36,9 @@ http {
   # Use personal generated dhparams https://weakdh.org/
   ssl_dhparam /etc/krathalan/dhparams.pem;
 
-  # Enable 0-RTT (TLS 1.3)
-  # Turn OFF on sites/blocks that take non-idempotent requests
+  # Stop 0-RTT replay attacks
   # https://blog.cloudflare.com/introducing-0-rtt/
-  ssl_early_data on;
+  ssl_early_data off;
 
   # Other SSL Settings
   ssl_session_cache shared:SSL:10m;
@@ -55,10 +54,10 @@ http {
   brotli on;
   brotli_static on;
   brotli_comp_level 11;
-  brotli_types text/html text/plain text/css;
+  brotli_types text/plain text/css;
   gzip on;
   gzip_comp_level 9;
-  gzip_types text/html text/plain text/css;
+  gzip_types text/plain text/css;
 
   # Basic Settings
   sendfile on;
