Separate makepkg.conf per machine

--- a/desktop/makepkg.conf
+++ b/desktop/makepkg.conf
@@ -42,7 +42,7 @@ CXXFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 #RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j4"
+MAKEFLAGS="-j8"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
@@ -121,7 +121,7 @@ DBGSRCDIR="/usr/src/debug"
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Hunter Peavey <srht@krathalan.net>"
+PACKAGER="Hunter Peavey (delta) <srht@krathalan.net>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
