--- a/gaming/pacman.conf
+++ b/gaming/pacman.conf
@@ -18,7 +18,7 @@ Architecture = auto
 # Do not extract /etc config files which SHOULD NOT be overriden
 # as they are set by files in /etc/krathalan, or generate useless
 # .pacnews (e.g. /etc/locale.gen from glibc)
-NoExtract = /etc/pacman.conf /etc/locale.gen /etc/pacman.d/mirrorlist /etc/conf.d/wireless-regdom
+NoExtract = etc/pacman.conf etc/makepkg.conf etc/locale.gen etc/pacman.d/mirrorlist etc/conf.d/wireless-regdom etc/dict/dictd.conf etc/ssh/ssh_config etc/ssh/sshd_config
 
 # Misc options
 ILoveCandy
