--- a/desktop/mkinitcpio.conf
+++ b/desktop/mkinitcpio.conf
@@ -4,7 +4,7 @@
 # run.  Advanced users may wish to specify all system modules
 # in this array.  For instance:
 #     MODULES=(piix ide_disk reiserfs)
-MODULES=(i915)
+MODULES=(nvidia nvidia_modeset nvidia_drm nvidia_uvm)
 
 # BINARIES
 # This setting includes any additional binaries a given user may
