--- a/home-server/pacman.conf
+++ b/home-server/pacman.conf
@@ -21,9 +21,9 @@ Architecture = auto
 NoExtract = etc/pacman.conf etc/makepkg.conf etc/locale.gen etc/pacman.d/mirrorlist etc/conf.d/wireless-regdom etc/dict/dictd.conf etc/ssh/ssh_config etc/ssh/sshd_config
 
 # Misc options
-# ILoveCandy
+ILoveCandy
 UseSyslog
-# Color
+Color
 TotalDownload
 CheckSpace
 VerbosePkgLists
