Fix server ping issues

--- a/server/sysctl.d/krathalans-custom-server.conf
+++ b/server/sysctl.d/krathalans-custom-server.conf
@@ -66,8 +66,8 @@ net.ipv6.conf.default.accept_redirects=0
 net.ipv4.conf.all.send_redirects=0
 net.ipv4.conf.default.send_redirects=0
 
-# Ignore all ICMP requests
-net.ipv4.icmp_echo_ignore_all=1
+# ALLOW all ICMP requests -- we filter these with firewalld
+net.ipv4.icmp_echo_ignore_all=0
 
 # Disable TCP timestamps, can be used to deanonymize you
 net.ipv4.tcp_timestamps=0
