Update modprobed-hardening to block iptables

--- a/meta/modprobe.d/modprobed-hardening.conf
+++ b/meta/modprobe.d/modprobed-hardening.conf
@@ -1,4 +1,9 @@
 # Personal
+# Disable iptables et al. use nftables only with firewalld
+install ip_tables /bin/false
+install ip6_tables /bin/false
+install x_tables /bin/false
+
 # Blacklist watchdog modules -- simply unneeded
 install iTCO_wdt /bin/false
 install iTCO_vendor_support /bin/false
@@ -27,7 +32,7 @@ install appletalk /bin/false
 install psnap /bin/false
 install p8023 /bin/false
 install llc /bin/false
-install p8022 /bin/false 
+install p8022 /bin/false
 
 # Blacklist uncommon filesystems
 install cramfs /bin/false
@@ -36,8 +41,8 @@ install jffs2 /bin/false
 install hfs /bin/false
 install hfsplus /bin/false
 install squashfs /bin/false
-install udf /bin/false 
+install udf /bin/false
 
 # Blacklist webcam module
-install uvcvideo /bin/false 
+install uvcvideo /bin/false
 
