Update packager email in makepkg.conf

--- a/home-server/makepkg.conf
+++ b/home-server/makepkg.conf
@@ -121,7 +121,7 @@ DBGSRCDIR="/usr/src/debug"
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Hunter Peavey (alpha) <srht@krathalan.net>"
+PACKAGER="Hunter Peavey (alpha-builder) <dev@krathalan.net>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
