--- a/gaming/makepkg.conf
+++ b/gaming/makepkg.conf
@@ -1,5 +1,5 @@
 #!/hint/bash
-#
+# 
 # /etc/makepkg.conf
 #
 
@@ -37,14 +37,14 @@ CHOST="x86_64-pc-linux-gnu"
 
 #-- Compiler and Linker Flags
 #CPPFLAGS=""
-CFLAGS="-march=x86-64 -mtune=generic -O2 -pipe -fno-plt -fexceptions \
+CFLAGS="-march=znver3 -ftree-vectorize -O2 -pipe -fno-plt -fexceptions \
         -Wp,-D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security \
         -fstack-clash-protection -fcf-protection"
 CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 #RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j8"
+MAKEFLAGS="-j12"
 #-- Debugging flags
 DEBUG_CFLAGS="-g -fvar-tracking-assignments"
 DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
@@ -123,7 +123,7 @@ DBGSRCDIR="/usr/src/debug"
 #-- Log files: specify a fixed directory where all log files will be placed
 #LOGDEST=/home/makepkglogs
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Hunter Peavey (theta) <dev@krathalan.net>"
+PACKAGER="rat (gaming) <DO NOT DISTRIBUTE>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
