--- a/laptop/tlp.d/krathalans-custom.conf
+++ b/laptop/tlp.d/krathalans-custom.conf
@@ -1,3 +1,5 @@
+CPU_SCALING_GOVERNOR_ON_AC=performance
+CPU_SCALING_GOVERNOR_ON_BAT=powersave
 CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
 CPU_MAX_PERF_ON_BAT=70
 SOUND_POWER_SAVE_ON_BAT=1
