--- a/laptop/tlp.d/krathalans-custom.conf
+++ b/laptop/tlp.d/krathalans-custom.conf
@@ -2,5 +2,6 @@ CPU_SCALING_GOVERNOR_ON_AC=performance
 CPU_SCALING_GOVERNOR_ON_BAT=powersave
 CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
 CPU_MAX_PERF_ON_BAT=70
+CPU_MAX_PERF_ON_AC=100
 SOUND_POWER_SAVE_ON_BAT=1
 SOUND_POWER_SAVE_CONTROLLER=Y
