Update nginx.conf for home-server to add syncthing reverse proxy

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -1,4 +1,9 @@
-# Dynamic reverse proxy pacman cache for home-server on local network
+# Hosts:
+# 32792/tcp: Reverse proxy for local syncthing GUI on home-server
+# 8080/tcp: Dynamic reverse proxy pacman cache for home-server on local network
+
+# https://docs.syncthing.net/users/reverseproxy.html
+# https://docs.syncthing.net/users/faq.html#why-do-i-get-host-check-error-in-the-gui-api
 # https://wiki.archlinux.org/title/Pacman/Tips_and_tricks#Dynamic_reverse_proxy_cache_using_nginx
 
 worker_processes  1;
@@ -19,9 +24,26 @@ http {
     server_names_hash_bucket_size 128;
 
     # nginx may need to resolve domain names at run time
-    # use Google DNS servers
-    # use only IPv4 addresses
+    # use local pihole
     resolver 127.0.0.1 ipv6=off;
+
+    # Syncthing
+    server
+    {
+        listen 32792;
+        server_name 192.168.1.2;
+        location /syncthing/ {
+            proxy_set_header Host localhost;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_pass http://localhost:8384/;
+
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
+        }
+    }
 
     # Pacman Cache
     server
