Change pacman-cache to be on /mnt/storage instead of /srv/http

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
     {
         listen 8080;
         server_name 192.168.1.2;
-        root /srv/http/pacman-cache;
+        root /mnt/storage/pacman-cache;
         autoindex on;
 
         # Requests for package db, signature files and files db should redirect upstream without caching
