--- a/home-server/systemd/system/clean-pacman-nginx-cache.service
+++ b/home-server/systemd/system/clean-pacman-nginx-cache.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Remove old packages from /srv/http/pacman-cache
+Description=Remove old packages from /mnt/storage/pacman-cache
 
 [Service]
 Type=oneshot
-ExecStart=find /srv/http/pacman-cache/ -type d -exec paccache -v -r -k 1 -c {} \;
+ExecStart=find /mnt/storage/pacman-cache/ -type d -exec paccache -v -r -k 1 -c {} \;
 
 # Lowering priority
 OOMScoreAdjust=1000
