Update pacman.conf to use reverse proxy pacman cache for krathalan repo

--- a/gaming/pacman.conf
+++ b/gaming/pacman.conf
@@ -49,4 +49,4 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [krathalan]
-Server = https://builds.krathalan.net/$arch
+Include = /etc/pacman.d/mirrorlist
