--- a/pacman.conf
+++ b/pacman.conf
@@ -46,4 +46,4 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [krathalan]
-Server = https://builds.krathalan.net/$arch
+Include = /etc/pacman.d/mirrorlist
