Update home-server nginx.conf for krathalan repo

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -53,6 +53,19 @@ http {
         root /mnt/storage/pacman-cache;
         autoindex on;
 
+        # Special rules for krathalan repo
+        location ~ /krathalan/.*\.(db|sig|files)$ {
+            proxy_pass https://builds.krathalan.net$request_uri;
+        }
+        location ~ /krathalan/.*\.tar\.(xz|zst)$ {
+            proxy_store on;
+            proxy_redirect off;
+            proxy_store_access user:rw group:rw all:r;
+            proxy_next_upstream error timeout http_404;
+            proxy_pass https://builds.krathalan.net$request_uri;
+        }
+
+
         # Requests for package db, signature files and files db should redirect upstream without caching
         location ~ \.(db|sig|files)$ {
             proxy_pass http://mirrors$request_uri;
