Fix last commit

--- a/server/pacman.conf
+++ b/server/pacman.conf
@@ -46,4 +46,4 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [krathalan]
-Sever = https://builds.krathalan.net/$arch
+Server = https://builds.krathalan.net/$arch
