--- a/home-server/systemd/system/krack-build@.service.d/limit-processing.conf
+++ b/home-server/systemd/system/krack-build@.service.d/limit-processing.conf
@@ -1,10 +1,10 @@
 # Sets service to:
-# - restricted to cores 1, 2, 6, and 7 on the CPU. on a 5600x (6c/12t), 
-#   this translates to cores 1 & 2 and both of their SMT ("hyperthreading") threads
+# - restricted to cores 1,2,3,6,7,8 on the CPU. on a 5600x (6c/12t), 
+#   this translates to cores 1,2,3 and their SMT ("hyperthreading") threads
 # - lowest priority nice level
 # - lowest IO scheduling priority
 
 [Service]
-AllowedCPUs=0,1,6,7
+AllowedCPUs=0,1,2,6,7,8
 Nice=19
 IOSchedulingPriority=7
