Update pacman.conf noextract for dnscrypt-proxy

--- a/pacman.conf
+++ b/pacman.conf
@@ -18,7 +18,7 @@ Architecture = auto
 # Do not extract /etc config files which SHOULD NOT be overriden
 # as they are set by files in /etc/krathalan, or generate useless
 # .pacnews (e.g. /etc/locale.gen from glibc)
-NoExtract = etc/booster.yaml etc/pacman.conf etc/makepkg.conf etc/locale.gen etc/pacman.d/mirrorlist etc/conf.d/wireless-regdom etc/dict/dictd.conf etc/ssh/ssh_config etc/ssh/sshd_config etc/sudoers
+NoExtract = etc/booster.yaml etc/dnscrypt-proxy/dnscrypt-proxy.toml etc/pacman.conf etc/makepkg.conf etc/locale.gen etc/pacman.d/mirrorlist etc/conf.d/wireless-regdom etc/dict/dictd.conf etc/ssh/ssh_config etc/ssh/sshd_config etc/sudoers
 
 # Misc options
 ParallelDownloads = 5
