Update home-server nginx

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -24,8 +24,8 @@ http {
     server_names_hash_bucket_size 128;
 
     # nginx may need to resolve domain names at run time
-    # use local pihole
-    resolver 127.0.0.1 ipv6=off;
+    # use local unbound on router
+    resolver 192.168.1.1 ipv6=off;
 
     # Syncthing
     server
