--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -111,21 +111,21 @@ http {
     {
         listen 127.0.0.1:8001;
         location / {
-            proxy_pass https://ziply.mm.fcix.net/archlinux$request_uri;
+            proxy_pass https://archlinux.mailtunnel.eu$request_uri;
         }
     }
     server
     {
         listen 127.0.0.1:8002;
         location / {
-            proxy_pass https://mirrors.ocf.berkeley.edu/archlinux$request_uri;
+            proxy_pass https://mirror.cyberbits.eu/archlinux$request_uri;
         }
     }
     server
     {
         listen 127.0.0.1:8003;
         location / {
-            proxy_pass https://archmirror1.octyl.net$request_uri;
+            proxy_pass https://de.arch.mirror.kescher.at$request_uri;
         }
     }
 }
