See last commit

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -111,14 +111,14 @@ http {
     {
         listen 127.0.0.1:8001;
         location / {
-            proxy_pass https://archlinux.mailtunnel.eu$request_uri;
+            proxy_pass https://mirror.f4st.host/archlinux$request_uri;
         }
     }
     server
     {
         listen 127.0.0.1:8002;
         location / {
-            proxy_pass https://mirror.cyberbits.eu/archlinux$request_uri;
+            proxy_pass https://mirror.theo546.fr/archlinux$request_uri;
         }
     }
     server
