Fix dovecot config

--- a/server/dovecot/dovecot.conf
+++ b/server/dovecot/dovecot.conf
@@ -7,8 +7,8 @@
 
 # If you're not a brainlet, SSL must be set to required.
 ssl = required
-ssl_cert = </etc/letsencrypt/live/mail.krathalan.net/fullchain.pem
-ssl_key = </etc/letsencrypt/live/mail.krathalan.net/privkey.pem
+ssl_cert = </etc/letsencrypt/live/krathalan.net/fullchain.pem
+ssl_key = </etc/letsencrypt/live/krathalan.net/privkey.pem
 
 # https://ssl-config.mozilla.org
 ssl_min_protocol = TLSv1.2
