Update pacman mirrors

--- a/home-server/nginx/nginx.conf
+++ b/home-server/nginx/nginx.conf
@@ -111,21 +111,21 @@ http {
     {
         listen 127.0.0.1:8001;
         location / {
-            proxy_pass https://mirror.f4st.host/archlinux$request_uri;
+            proxy_pass http://mirrors.cat.pdx.edu/archlinux$request_uri;
         }
     }
     server
     {
         listen 127.0.0.1:8002;
         location / {
-            proxy_pass https://mirror.theo546.fr/archlinux$request_uri;
+            proxy_pass http://mirror.lty.me/archlinux$request_uri;
         }
     }
     server
     {
         listen 127.0.0.1:8003;
         location / {
-            proxy_pass https://de.arch.mirror.kescher.at$request_uri;
+            proxy_pass http://plug-mirror.rcac.purdue.edu/archlinux$request_uri;
         }
     }
 }
