Update backup script for server

--- a/server/systemd/system/backup-email.service
+++ b/server/systemd/system/backup-email.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Backup /etc and /home
+Description=Perform borg backup for /etc, /home/, and /var/lib/radicale
 
 [Service]
 Type=oneshot
