Update smb/avahi files

--- a/home-server/samba/smb.conf
+++ b/home-server/samba/smb.conf
@@ -23,7 +23,7 @@ logging = systemd
 
 [timemachine]
 # Load in modules (order is critical!)
-vfs objects = catia fruit streams_xattr
+vfs objects = acl_xattr catia fruit streams_xattr
 fruit:time machine = yes
 fruit:time machine max size = 300G
 comment = Time Machine Backup
