--- a/home-server/avahi/services/smb.service
+++ b/home-server/avahi/services/smb.service
@@ -13,7 +13,7 @@
   </service>
   <service>
     <type>_adisk._tcp</type>
-    <txt-record>dk0=adVN=timemachine,adVF=0x82</txt-record>
+    <txt-record>dk0=adVN=time-machine,adVF=0x82</txt-record>
     <txt-record>sys=waMa=0,adVF=0x100</txt-record>
   </service>
 </service-group>
