Update login.conf and move some xorg.conf.d files to base

--- a/base/systemd/logind.conf.d/krathalans-custom.conf
+++ b/base/systemd/logind.conf.d/krathalans-custom.conf
@@ -1,5 +1,5 @@
 [Login]
 KillUserProcesses=yes
-HandleLidSwitch=suspend-then-hibernate
-HandleLidSwitchExternalPower=suspend-then-hibernate
+HandleLidSwitch=suspend
+HandleLidSwitchExternalPower=suspend
 HandleLidSwitchDocked=ignore
